--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  publish = "dist"
+  publish = "."
 
 [[headers]]
   for = "/*"
@@ -13,9 +13,10 @@
       frame-src 'self' https://www.youtube.com;
       object-src 'none';
       base-uri 'self';
+      connect-src 'self';
     """
     Strict-Transport-Security = "max-age=63072000; includeSubDomains; preload"
     X-Frame-Options = "SAMEORIGIN"
     X-Content-Type-Options = "nosniff"
-    Referrer-Policy = "strict-origin-when-cross-origin"
+    Referrer-Policy = "no-referrer"
     Permissions-Policy = "geolocation=(), camera=(), microphone=()"
