--- a/netlify.toml
+++ b/netlify.toml
@@ -6,8 +6,8 @@
   [headers.values]
     Content-Security-Policy = """
       default-src 'self';
-      script-src 'self';
-      style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+      script-src 'self' https://cdn.jsdelivr.net;
+      style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.jsdelivr.net;
       img-src 'self' data: https://i.ytimg.com;
       font-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com;
       frame-src 'self' https://www.youtube.com;
