--- a/netlify.toml
+++ b/netlify.toml
@@ -9,7 +9,7 @@
       script-src 'self' https://cdn.jsdelivr.net;
       style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.jsdelivr.net;
       img-src 'self' data: https://i.ytimg.com;
-      font-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com;
+      font-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com https://cdn.jsdelivr.net;
       frame-src 'self' https://www.youtube.com;
       object-src 'none';
       base-uri 'self';
